# D100_ps1_ex2

./: README.md  analysis.ipynb  environment.yml  pyproject.toml
data/: gdp_data.csv
fed/: clean_data.py  load_data.py  visualise_data.py
